--- a/workshops/03_image_distortion_and_undistortion.ipynb
+++ b/workshops/03_image_distortion_and_undistortion.ipynb
@@ -480,7 +480,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -526,7 +526,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": null,
    "metadata": {
     "tags": [
      "hide-input"
@@ -555,15 +555,36 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
+    "from scipy.ndimage import map_coordinates\n",
+    "\n",
+    "\n",
     "def undistort_image(\n",
     "    image: NDArray[Shape[\"H, W, 3\"], Float32], lens_model: LensModel\n",
     ") -> NDArray[Shape[\"H, W, 3\"], Float32]:\n",
     "    y, x = np.indices(image.shape[:2])\n",
-    "    return image  # TODO: Implement this"
+    "    pixels = np.stack([x, y], axis=-1)\n",
+    "    normalized_pixels = lens_model.normalize_pixels(pixels=pixels)\n",
+    "    distorted_normalized_pixels = lens_model.distort_pixels(\n",
+    "        normalized_pixels=normalized_pixels\n",
+    "    )\n",
+    "    distorted_pixels = lens_model.denormalize_pixels(pixels=distorted_normalized_pixels)\n",
+    "\n",
+    "    undistorted_image = np.stack(\n",
+    "        [\n",
+    "            map_coordinates(\n",
+    "                input=_image,\n",
+    "                coordinates=[distorted_pixels[..., 1], distorted_pixels[..., 0]],\n",
+    "                order=1,\n",
+    "            )\n",
+    "            for _image in image.transpose(2, 0, 1)\n",
+    "        ],\n",
+    "        axis=-1,\n",
+    "    )\n",
+    "    return undistorted_image.astype(np.float32)"
    ]
   },
   {
@@ -613,7 +634,7 @@
     "image_house = plt.imread(str(TestDataPaths.distorted_house))\n",
     "lens_model_house = LensModel.read_from_json(TestDataPaths.distorted_house_lens_model)\n",
     "\n",
-    "plt.figure()\n",
+    "plt.figure(figsize=(10, 8))\n",
     "plt.imshow(image_house)\n",
     "plt.axis(\"off\")\n",
     "plt.show()"
@@ -655,26 +676,92 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "def undistort_image_with_new_camera_matrix(): ...  # TODO: Implement this"
+    "from oaf_vision_3d.lens_model import _normalize_pixels as normalize_pixels\n",
+    "\n",
+    "\n",
+    "def undistort_image_with_new_camera_matrix(\n",
+    "    image: NDArray[Shape[\"H, W, 3\"], Float32],\n",
+    "    lens_model: LensModel,\n",
+    "    new_camera_matrix: CameraMatrix,\n",
+    ") -> NDArray[Shape[\"H, W, 3\"], Float32]:\n",
+    "    y, x = np.indices(image.shape[:2])\n",
+    "    pixels = np.stack([x, y], axis=-1)\n",
+    "    normalized_pixels = normalize_pixels(pixels=pixels, camera_matrix=new_camera_matrix)\n",
+    "    distorted_normalized_pixels = lens_model.distort_pixels(\n",
+    "        normalized_pixels=normalized_pixels\n",
+    "    )\n",
+    "    distorted_pixels = lens_model.denormalize_pixels(pixels=distorted_normalized_pixels)\n",
+    "\n",
+    "    undistorted_image = np.stack(\n",
+    "        [\n",
+    "            map_coordinates(\n",
+    "                input=_image,\n",
+    "                coordinates=[distorted_pixels[..., 1], distorted_pixels[..., 0]],\n",
+    "                order=1,\n",
+    "            )\n",
+    "            for _image in image.transpose(2, 0, 1)\n",
+    "        ],\n",
+    "        axis=-1,\n",
+    "    )\n",
+    "    return undistorted_image.astype(np.float32)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "new_undistorted_image_house = undistort_image_with_new_camera_matrix()\n",
+    "scale = 1.0\n",
+    "new_camera_matrix = CameraMatrix(\n",
+    "    fx=lens_model_house.camera_matrix.fx * scale,\n",
+    "    fy=lens_model_house.camera_matrix.fy * scale,\n",
+    "    cx=lens_model_house.camera_matrix.cx,\n",
+    "    cy=lens_model_house.camera_matrix.cy,\n",
+    ")\n",
     "\n",
-    "if new_undistorted_image_house is not None:\n",
-    "    plt.figure(figsize=(10, 8))\n",
-    "    plt.imshow(new_undistorted_image_house)\n",
-    "    plt.axis(\"off\")\n",
-    "    plt.show()"
+    "new_undistorted_image_house = undistort_image_with_new_camera_matrix(\n",
+    "    image=image_house, lens_model=lens_model_house, new_camera_matrix=new_camera_matrix\n",
+    ")\n",
+    "\n",
+    "plt.figure(figsize=(10, 8))\n",
+    "plt.imshow(new_undistorted_image_house)\n",
+    "plt.axis(\"off\")\n",
+    "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import cv2\n",
+    "\n",
+    "\n",
+    "new_camera_matrix, _ = cv2.getOptimalNewCameraMatrix(\n",
+    "    cameraMatrix=lens_model_house.camera_matrix.as_matrix(),\n",
+    "    distCoeffs=lens_model_house.distortion_coefficients.as_opencv_vector(),\n",
+    "    imageSize=image_house.shape[:2][::-1],\n",
+    "    alpha=0,\n",
+    ")\n",
+    "\n",
+    "new_undistorted_image_house = undistort_image_with_new_camera_matrix(\n",
+    "    image=image_house,\n",
+    "    lens_model=lens_model_house,\n",
+    "    new_camera_matrix=CameraMatrix.from_matrix(\n",
+    "        np.array(new_camera_matrix, dtype=np.float32)\n",
+    "    ),\n",
+    ")\n",
+    "\n",
+    "plt.figure(figsize=(10, 8))\n",
+    "plt.imshow(new_undistorted_image_house)\n",
+    "plt.axis(\"off\")\n",
+    "plt.show()"
    ]
   }
  ],
