Update with fixes from WS 5

--- a/workshops/04_3d_2d_projections_and_pnp.ipynb
+++ b/workshops/04_3d_2d_projections_and_pnp.ipynb
@@ -459,7 +459,23 @@
     "    epsilon: float = 1e-5,\n",
     "    max_iterations: int = 100,\n",
     ") -> tuple[NDArray[Shape[\"3\"], Float32], NDArray[Shape[\"3\"], Float32]]:\n",
-    "    return rvec, tvec  # Implement this"
+    "    for _ in range(max_iterations):\n",
+    "        projected_points, jacobian = project_points_with_jacobian(\n",
+    "            points=points, rvec=rvec, tvec=tvec, lens_model=lens_model\n",
+    "        )\n",
+    "        error = pixels - projected_points\n",
+    "\n",
+    "        jacobian_shaped = jacobian.reshape(-1, 6)\n",
+    "        error_shaped = error.reshape(-1)\n",
+    "        step = np.linalg.lstsq(jacobian_shaped, error_shaped, rcond=None)[0]\n",
+    "\n",
+    "        rvec += np.array(step[:3], dtype=np.float32)\n",
+    "        tvec += np.array(step[3:], dtype=np.float32)\n",
+    "\n",
+    "        update_error = np.linalg.norm(step)\n",
+    "        if update_error < epsilon:\n",
+    "            return rvec, tvec\n",
+    "    raise RuntimeError(\"Failed to converge\")"
    ]
   },
   {
