--- a/workshops/05_dual_camera_setups.ipynb
+++ b/workshops/05_dual_camera_setups.ipynb
@@ -147,7 +147,11 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "tags": [
+     "hide-input"
+    ]
+   },
    "outputs": [],
    "source": [
     "from oaf_vision_3d.project_points import project_points\n",
@@ -186,7 +190,11 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "tags": [
+     "hide-input"
+    ]
+   },
    "outputs": [],
    "source": [
     "from oaf_vision_3d.transformation_matrix import TransformationMatrix\n",
@@ -229,7 +237,11 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "tags": [
+     "hide-input"
+    ]
+   },
    "outputs": [],
    "source": [
     "undistorted_normalized_pixels_0 = lens_model_0.undistort_pixels(\n",
@@ -262,33 +274,18 @@
     "    undistorted_normalized_pixels_0: NDArray[Shape[\"H, W, 2\"], Float32],\n",
     "    undistorted_normalized_pixels_1: NDArray[Shape[\"H, W, 2\"], Float32],\n",
     "    transformation_matrix: TransformationMatrix,\n",
-    "):\n",
-    "    vector_0 = np.pad(\n",
-    "        undistorted_normalized_pixels_0, ((0, 0), (0, 0), (0, 1)), constant_values=1\n",
-    "    )\n",
-    "    vector_1 = transformation_matrix.rotate(\n",
-    "        points=np.pad(\n",
-    "            undistorted_normalized_pixels_1, ((0, 0), (0, 0), (0, 1)), constant_values=1\n",
-    "        )\n",
-    "    )\n",
-    "\n",
-    "    pq = -transformation_matrix.translation[None, None, :]\n",
-    "\n",
-    "    a = np.sum(vector_0 * vector_0, axis=-1)\n",
-    "    b = np.sum(vector_0 * vector_1, axis=-1)\n",
-    "    c = np.sum(vector_1 * vector_1, axis=-1)\n",
-    "    d = np.sum(vector_0 * pq, axis=-1)\n",
-    "    e = np.sum(vector_1 * pq, axis=-1)\n",
-    "\n",
-    "    t = (b * e - c * d) / (a * c - b * b)\n",
-    "\n",
-    "    return t[:, :, None] * vector_0"
+    ") -> NDArray[Shape[\"H, W, 3\"], Float32]:\n",
+    "    return np.zeros((10, 10, 3), dtype=np.float32)  # Implement this"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "tags": [
+     "hide-input"
+    ]
+   },
    "outputs": [],
    "source": [
     "trianguated_points = triangulate_points(\n",
@@ -310,7 +307,11 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "tags": [
+     "hide-input"
+    ]
+   },
    "outputs": [],
    "source": [
     "valid = np.allclose(points, trianguated_points, atol=1e-5)\n",
