--- a/workshops/05_dual_camera_setups.ipynb
+++ b/workshops/05_dual_camera_setups.ipynb
@@ -275,7 +275,25 @@
     "    undistorted_normalized_pixels_1: NDArray[Shape[\"H, W, 2\"], Float32],\n",
     "    transformation_matrix: TransformationMatrix,\n",
     ") -> NDArray[Shape[\"H, W, 3\"], Float32]:\n",
-    "    return np.zeros((10, 10, 3), dtype=np.float32)  # Implement this"
+    "    v_0 = np.pad(\n",
+    "        undistorted_normalized_pixels_0, ((0, 0), (0, 0), (0, 1)), constant_values=1\n",
+    "    )\n",
+    "    v_1 = transformation_matrix.rotate(\n",
+    "        np.pad(\n",
+    "            undistorted_normalized_pixels_1, ((0, 0), (0, 0), (0, 1)), constant_values=1\n",
+    "        )\n",
+    "    )\n",
+    "    p_1_p_0 = -transformation_matrix.translation[None, None, :]\n",
+    "\n",
+    "    a = (v_0 * v_0).sum(axis=-1)\n",
+    "    b = (v_0 * v_1).sum(axis=-1)\n",
+    "    c = (v_1 * v_1).sum(axis=-1)\n",
+    "    d = (v_0 * p_1_p_0).sum(axis=-1)\n",
+    "    e = (v_1 * p_1_p_0).sum(axis=-1)\n",
+    "\n",
+    "    t = (b * e - c * d) / (a * c - b * b)\n",
+    "\n",
+    "    return v_0 * t[..., None]"
    ]
   },
   {
@@ -376,7 +394,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.3"
+   "version": "3.11.10"
   }
  },
  "nbformat": 4,
