Workshop 7: Stereo matching fundamentals continued

--- a/workshops/06_stereo_matching_fundamentals.ipynb
+++ b/workshops/06_stereo_matching_fundamentals.ipynb
@@ -543,6 +543,7 @@
     "\n",
     "class CostFunction(Enum):\n",
     "    SUM_OF_ABSOLUTE_DIFFERENCE = 0\n",
+    "    SUM_OF_SQUARED_DIFFERENCE = 1\n",
     "\n",
     "\n",
     "def _get_cost(\n",
@@ -553,6 +554,8 @@
     "    match cost_function:\n",
     "        case CostFunction.SUM_OF_ABSOLUTE_DIFFERENCE:\n",
     "            return np.abs(image_0 - image_1).sum(axis=-1)\n",
+    "        case CostFunction.SUM_OF_SQUARED_DIFFERENCE:\n",
+    "            return ((image_0 - image_1) ** 2).sum(axis=-1)\n",
     "        case _:\n",
     "            raise ValueError(\"Invalid cost function\")\n",
     "\n",
@@ -674,6 +677,68 @@
    "outputs": [],
    "source": [
     "# open3d_visualize_point_cloud(xyz=xyz_new, rgb=data.image_0)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Different kernels and cost functions\n",
+    "\n",
+    "Here we test both the absolute difference and the squared difference cost functions. All are run with a block size of $11 \\times 11$, $17 \\times 17$, $23 \\times 23$ and $29 \\times 29$."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Choose testset\n",
+    "data_dir = TestDataPaths.stereo_data_0_dir\n",
+    "data = StereoData.from_path(data_dir)\n",
+    "\n",
+    "# Adjustable parameters\n",
+    "block_size = 29\n",
+    "disparity_range = data.expected_disparity\n",
+    "subpixel_fit = True\n",
+    "cost_function = CostFunction.SUM_OF_ABSOLUTE_DIFFERENCE\n",
+    "kernels = [11, 17, 23, 29]\n",
+    "\n",
+    "fig, axs = plt.subplots(2, 2, figsize=(16, 16))\n",
+    "for kernel, ax in zip(kernels, axs.ravel()):\n",
+    "    disparity_new = block_matching(\n",
+    "        image_0=data.image_0,\n",
+    "        image_1=data.image_1,\n",
+    "        disparity_range=disparity_range,\n",
+    "        block_size=kernel,\n",
+    "        subpixel_fit=subpixel_fit,\n",
+    "        cost_function=cost_function,\n",
+    "    )\n",
+    "\n",
+    "    ax.imshow(disparity_new)\n",
+    "    ax.axis(\"off\")\n",
+    "    ax.set_title(f\"Disparity Map (Kernel: {kernel})\")\n",
+    "fig.suptitle(\"Block Matching with Sum of Absolute Difference\")\n",
+    "\n",
+    "\n",
+    "cost_function = CostFunction.SUM_OF_SQUARED_DIFFERENCE\n",
+    "fig, axs = plt.subplots(2, 2, figsize=(16, 16))\n",
+    "for kernel, ax in zip(kernels, axs.ravel()):\n",
+    "    disparity_new = block_matching(\n",
+    "        image_0=data.image_0,\n",
+    "        image_1=data.image_1,\n",
+    "        disparity_range=disparity_range,\n",
+    "        block_size=kernel,\n",
+    "        subpixel_fit=subpixel_fit,\n",
+    "        cost_function=cost_function,\n",
+    "    )\n",
+    "\n",
+    "    ax.imshow(disparity_new)\n",
+    "    ax.axis(\"off\")\n",
+    "    ax.set_title(f\"Disparity Map (Kernel: {kernel})\")\n",
+    "fig.suptitle(\"Block Matching with Sum of Squared Difference\")\n",
+    "plt.show()"
    ]
   }
  ],
