Workshop 8: Building Your 3D Vision Pipeline

--- a/workshops/07_stereo_matching_fundamentals_continued.ipynb
+++ b/workshops/07_stereo_matching_fundamentals_continued.ipynb
@@ -8,7 +8,7 @@
     }
    },
    "source": [
-    "# 7: Stereo Matching Fundamentals Continues\n",
+    "# 7: Stereo Matching Fundamentals Continued\n",
     "\n",
     "In the [previous workshop](./06_stereo_matching_fundamentals.ipynb), we looked at stereo matching fundamentals. More precisely, we looked at the disparity map computation using the block matching algorithm. In this workshop, we will continue with stereo matching fundamentals and how we can do this without using disparity, that assumes a linear shift in $x$ direction."
    ]
@@ -33,11 +33,13 @@
     "import numpy as np\n",
     "from scipy.ndimage import map_coordinates\n",
     "from scipy.signal import convolve2d\n",
+    "from scipy.signal.windows import gaussian\n",
     "from scipy.spatial.transform import Rotation\n",
     "\n",
-    "\n",
     "from oaf_vision_3d._test_data_paths import TestDataPaths\n",
+    "from oaf_vision_3d.convolve2d import convolution_2d_nan\n",
     "from oaf_vision_3d.lens_model import CameraMatrix, DistortionCoefficients, LensModel\n",
+    "from oaf_vision_3d.point_cloud_visualization import open3d_visualize_point_cloud\n",
     "from oaf_vision_3d.poly_2_subvalue_fit import find_subvalue_poly_2\n",
     "from oaf_vision_3d.project_points import project_points\n",
     "from oaf_vision_3d.transformation_matrix import TransformationMatrix\n",
@@ -459,7 +461,7 @@
     "        points=xyz.reshape(-1, 3),\n",
     "        lens_model=lens_model,\n",
     "        transformation_matrix=transformation_matrix.inverse(),\n",
-    "    ).reshape(pixels.shape)\n",
+    "    ).reshape(*camera_vectors.shape[:2], 2)\n",
     "\n",
     "    return np.stack(\n",
     "        [\n",
@@ -467,6 +469,8 @@
     "                input=_image,\n",
     "                coordinates=[projected_points[..., 1], projected_points[..., 0]],\n",
     "                order=1,\n",
+    "                mode=\"constant\",\n",
+    "                cval=np.nan,\n",
     "            )\n",
     "            for _image in image.transpose(2, 0, 1)\n",
     "        ],\n",
@@ -518,7 +522,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "We see that this is similar to what we did with disparity and we might reason that we can do the same algorithm for stereo matching, just using depth instead of disparity. This also allows us to get depth directly, so the trianguilation is built into the algorithm. Let repeat this process for a range of depths, 126 to 150 mm:"
+    "We see that this is similar to what we did with disparity and we might reason that we can do the same algorithm for stereo matching, just using depth instead of disparity. This also allows us to get depth directly, so the trianguilation is built into the algorithm. Let repeat this process for a range of depths, 130 to 150 mm:"
    ]
   },
   {
@@ -534,7 +538,7 @@
     "    lens_model_1: LensModel,\n",
     "    transformation_matrix: TransformationMatrix,\n",
     "    depth_range: NDArray[Shape[\"2\"], Float32],\n",
-    "    step_size: int,\n",
+    "    step_size: float,\n",
     "    block_size: int,\n",
     "    subpixel_fit: bool,\n",
     ") -> NDArray[Shape[\"H, W, 3\"], Float32]:\n",
@@ -590,25 +594,18 @@
     "    image_1=stereo_data.image_1,\n",
     "    lens_model_1=stereo_data.lens_model_1,\n",
     "    transformation_matrix=stereo_data.transformation_matrix,\n",
-    "    depth_range=np.array([126.0, 141.0], dtype=np.float32),\n",
-    "    step_size=1,\n",
+    "    depth_range=np.array([130.0, 150.0], dtype=np.float32),\n",
+    "    step_size=1.5,\n",
     "    block_size=29,\n",
     "    subpixel_fit=True,\n",
     ")\n",
     "\n",
-    "plt.figure(figsize=(10, 10))\n",
+    "plt.figure(figsize=(12, 8))\n",
     "plt.imshow(xyz_single_plane_sweep[..., 2])\n",
     "plt.colorbar()\n",
     "plt.axis(\"off\")\n",
-    "plt.title(\"Depth map\")\n",
+    "plt.title(\"Depth map from single plane sweeping\")\n",
     "plt.show()"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "I will show of the pointcloud using Open3D, which is a great library for 3D visualization but also hard to work with in interactive mode, especially jupyter book. I will therefore not import and use open3D, but include the commented out code that I will be using. Feel free to comment out the code and run it in your local environment (`pip install open3d`)."
    ]
   },
   {
@@ -621,27 +618,7 @@
    },
    "outputs": [],
    "source": [
-    "# import open3d as o3d\n",
-    "\n",
-    "\n",
-    "# def open3d_visualize_point_cloud(\n",
-    "#     xyz: NDArray[Shape[\"H, W, 3\"], Float32], rgb: NDArray[Shape[\"H, W, 3\"], Float32]\n",
-    "# ):\n",
-    "#     points = xyz.reshape(-1, 3)\n",
-    "#     points[:, 1:3] *= -1  # Flip $y$ and $z$ axes\n",
-    "#     colors = rgb.reshape(-1, 3)\n",
-    "#     invalid = np.isnan(points).any(axis=1)\n",
-    "#     points = points[~invalid]\n",
-    "#     colors = colors[~invalid]\n",
-    "\n",
-    "#     pcd = o3d.geometry.PointCloud()\n",
-    "#     pcd.points = o3d.utility.Vector3dVector(points)\n",
-    "#     pcd.colors = o3d.utility.Vector3dVector(colors)\n",
-    "\n",
-    "#     o3d.visualization.draw([pcd])\n",
-    "\n",
-    "\n",
-    "# open3d_visualize_point_cloud(xyz=xyz_single_plane_sweep, rgb=stereo_data.image_0)"
+    "open3d_visualize_point_cloud(xyz=xyz_single_plane_sweep, rgb=stereo_data.image_0)"
    ]
   },
   {
@@ -827,11 +804,186 @@
     "    secondary_lens_models: list[LensModel],\n",
     "    secondary_transformation_matrices: list[TransformationMatrix],\n",
     "    depth_range: NDArray[Shape[\"2\"], Float32],\n",
-    "    step_size: int,\n",
+    "    step_size: float,\n",
     "    block_size: int,\n",
     "    subpixel_fit: bool,\n",
     ") -> NDArray[Shape[\"H, W, 3\"], Float32]:\n",
-    "    pass  # Implement this function"
+    "    pixels = np.indices(image.shape[:2], dtype=np.float32)[::-1].transpose((1, 2, 0))\n",
+    "    undistorted_normalized_pixels = lens_model.undistort_pixels(\n",
+    "        normalized_pixels=lens_model.normalize_pixels(pixels=pixels)\n",
+    "    )\n",
+    "    camera_vectors = np.pad(\n",
+    "        undistorted_normalized_pixels, ((0, 0), (0, 0), (0, 1)), constant_values=1.0\n",
+    "    )\n",
+    "\n",
+    "    depths = np.arange(\n",
+    "        start=depth_range[0],\n",
+    "        stop=depth_range[1] + step_size,\n",
+    "        step=step_size,\n",
+    "        dtype=np.float32,\n",
+    "    )\n",
+    "    error = []\n",
+    "    for depth in depths:\n",
+    "        shifted_images = [\n",
+    "            repeoject_image_at_depth(\n",
+    "                image=_image,\n",
+    "                camera_vectors=camera_vectors,\n",
+    "                depth=depth,\n",
+    "                lens_model=_lens_model,\n",
+    "                transformation_matrix=_transformation_matrix,\n",
+    "            )\n",
+    "            for _image, _lens_model, _transformation_matrix in zip(\n",
+    "                secondary_images,\n",
+    "                secondary_lens_models,\n",
+    "                secondary_transformation_matrices,\n",
+    "            )\n",
+    "        ]\n",
+    "        single_pixel_error = np.abs(image[None, ...] - shifted_images).sum(axis=(0, -1))\n",
+    "\n",
+    "        convoluted_error = convolve2d(\n",
+    "            convolve2d(\n",
+    "                single_pixel_error, np.ones((1, block_size)) / block_size, mode=\"same\"\n",
+    "            ),\n",
+    "            np.ones((block_size, 1)) / block_size,\n",
+    "            mode=\"same\",\n",
+    "        )\n",
+    "        error.append(convoluted_error)\n",
+    "    error_array = np.array(error, dtype=np.float32)\n",
+    "\n",
+    "    if subpixel_fit:\n",
+    "        output_value = find_subvalue_poly_2(values=depths, function_value=error_array)\n",
+    "    else:\n",
+    "        output_value = depths[np.argmin(error_array, axis=0)].astype(np.float32)\n",
+    "\n",
+    "    output_value[output_value >= depths.max()] = np.nan\n",
+    "    output_value[output_value <= depths.min()] = np.nan\n",
+    "\n",
+    "    return camera_vectors * output_value[..., None]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "xyz_multiple_plane_sweep = multi_camera_plane_sweeping(\n",
+    "    image=stereo_data_0.image_0,\n",
+    "    lens_model=stereo_data_0.lens_model_0,\n",
+    "    secondary_images=[stereo_data_0.image_1, stereo_data_1.image_1],\n",
+    "    secondary_lens_models=[stereo_data_0.lens_model_1, stereo_data_1.lens_model_1],\n",
+    "    secondary_transformation_matrices=[\n",
+    "        stereo_data_0.transformation_matrix,\n",
+    "        stereo_data_1.transformation_matrix,\n",
+    "    ],\n",
+    "    depth_range=np.array([135.0, 142.0], dtype=np.float32),\n",
+    "    step_size=0.5,\n",
+    "    block_size=29,\n",
+    "    subpixel_fit=True,\n",
+    ")\n",
+    "\n",
+    "plt.figure(figsize=(12, 8))\n",
+    "plt.imshow(xyz_multiple_plane_sweep[..., 2])\n",
+    "plt.colorbar()\n",
+    "plt.axis(\"off\")\n",
+    "plt.title(\"Depth map from multiple plane sweep\")\n",
+    "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "We have now used 2 secondary cameras to calculate the depth of the main camera. Regardless of that we still see the limitiation of the stereo matching algorithm, that it is hard to get depth in areas where there is no texture. Let's visualize it with Open3D:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "open3d_visualize_point_cloud(xyz=xyz_multiple_plane_sweep, rgb=stereo_data_0.image_0)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Filtering\n",
+    "\n",
+    "To improve the result we can add some simple filtering, for example to reduce the amount of outliers. My idea was to apply a relativly big `ones` kernel and then zap points that are a certain distance away from the filtered depth. Since what we are looking at is smooth and flat, this should work. But remember that it most likely will not work for more complex scenes."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "kernel_size = 25\n",
+    "limit = 0.5\n",
+    "\n",
+    "xyz_filtered = xyz_multiple_plane_sweep.copy()\n",
+    "\n",
+    "z_convolved = convolution_2d_nan(\n",
+    "    xyz_filtered[..., 2], np.ones(kernel_size, dtype=np.float32)\n",
+    ")\n",
+    "invalid = np.abs(xyz_filtered[..., 2] - z_convolved) > limit\n",
+    "xyz_filtered[invalid] = np.nan\n",
+    "\n",
+    "plt.figure(figsize=(12, 8))\n",
+    "plt.imshow(xyz_filtered[..., 2], interpolation=\"none\")\n",
+    "plt.colorbar()\n",
+    "plt.axis(\"off\")\n",
+    "plt.title(\"Depth map (filtered)\")\n",
+    "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "open3d_visualize_point_cloud(xyz=xyz_filtered, rgb=stereo_data_0.image_0)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "We can also add a gaussian blur to the resulting point cloud. This should reduce the noise in the point cloud:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "xyz_filtered_smoothed = xyz_filtered.copy()\n",
+    "kernel = gaussian(M=7, std=1.5)\n",
+    "kernel /= kernel.sum()\n",
+    "\n",
+    "z_filtered_smoothed = convolution_2d_nan(image=xyz_filtered[..., 2], kernel=kernel)\n",
+    "xyz_filtered_smoothed *= z_filtered_smoothed[..., None] / xyz_filtered[..., 2:3]\n",
+    "\n",
+    "plt.figure(figsize=(10, 10))\n",
+    "plt.imshow(xyz_filtered_smoothed[..., 2], interpolation=\"none\")\n",
+    "plt.colorbar()\n",
+    "plt.axis(\"off\")\n",
+    "plt.title(\"Depth map (filtered and smoothed)\")\n",
+    "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "open3d_visualize_point_cloud(xyz=xyz_filtered_smoothed, rgb=stereo_data_0.image_0)"
    ]
   }
  ],
