--- a/workshops/06_stereo_matching_fundamentals.ipynb
+++ b/workshops/06_stereo_matching_fundamentals.ipynb
@@ -55,9 +55,9 @@
     "\n",
     "from oaf_vision_3d._test_data_paths import TestDataPaths\n",
     "from oaf_vision_3d.lens_model import LensModel\n",
+    "from oaf_vision_3d.point_cloud_visualization import open3d_visualize_point_cloud\n",
     "from oaf_vision_3d.transformation_matrix import TransformationMatrix\n",
     "from oaf_vision_3d._stereo_data_reader import StereoData\n",
-    "\n",
     "\n",
     "data_dir = TestDataPaths.traproom1_dir\n",
     "stereo_data = StereoData.from_path(data_dir)\n",
@@ -190,7 +190,7 @@
    "source": [
     "### Open3D Pointcloud\n",
     "\n",
-    "I will show of the pointcloud using Open3D, which is a great library for 3D visualization but also hard to work with in interactive mode, especially jupyter book. I will therefore not import and use open3D, but include the commented out code that I will be using. Feel free to comment out the code and run it in your local environment (`pip install open3d`)."
+    "I will show of the pointcloud using Open3D, which is a great library for 3D visualization but also hard to work with in interactive mode, especially jupyter book. The pointcloud will open in a separate window, and block the execution of the code. You can close the window to continue the execution of the code."
    ]
   },
   {
@@ -203,27 +203,7 @@
    },
    "outputs": [],
    "source": [
-    "# import open3d as o3d\n",
-    "\n",
-    "\n",
-    "# def open3d_visualize_point_cloud(\n",
-    "#     xyz: NDArray[Shape[\"H, W, 3\"], Float32], rgb: NDArray[Shape[\"H, W, 3\"], Float32]\n",
-    "# ):\n",
-    "#     points = xyz.reshape(-1, 3)\n",
-    "#     points[:, 1:3] *= -1  # Flip $y$ and $z$ axes\n",
-    "#     colors = rgb.reshape(-1, 3)\n",
-    "#     invalid = np.isnan(points).any(axis=1)\n",
-    "#     points = points[~invalid]\n",
-    "#     colors = colors[~invalid]\n",
-    "\n",
-    "#     pcd = o3d.geometry.PointCloud()\n",
-    "#     pcd.points = o3d.utility.Vector3dVector(points)\n",
-    "#     pcd.colors = o3d.utility.Vector3dVector(colors)\n",
-    "\n",
-    "#     o3d.visualization.draw([pcd])\n",
-    "\n",
-    "\n",
-    "# open3d_visualize_point_cloud(xyz=xyz_ground_truth, rgb=stereo_data.image_0)"
+    "open3d_visualize_point_cloud(xyz=xyz_ground_truth, rgb=stereo_data.image_0)"
    ]
   },
   {
@@ -252,7 +232,6 @@
     "data_dir = TestDataPaths.stereo_data_0_dir\n",
     "stereo_matching_data = StereoData.from_path(data_dir)\n",
     "\n",
-    "print(stereo_matching_data.expected_disparity)\n",
     "fig, ax = plt.subplots(2, 1, figsize=(12, 12))\n",
     "ax[0].imshow(stereo_matching_data.image_0, cmap=\"gray\", vmin=0, vmax=1)\n",
     "ax[0].set_title(\"Image left\")\n",
@@ -302,7 +281,7 @@
     "\n",
     "disparities = np.arange(\n",
     "    stereo_matching_data.expected_disparity[0],\n",
-    "    stereo_matching_data.expected_disparity[1],\n",
+    "    stereo_matching_data.expected_disparity[1] + 1,\n",
     "    dtype=np.int32,\n",
     ")\n",
     "\n",
@@ -387,7 +366,7 @@
    },
    "outputs": [],
    "source": [
-    "# open3d_visualize_point_cloud(xyz=xyz_simple, rgb=stereo_matching_data.image_0)"
+    "open3d_visualize_point_cloud(xyz=xyz_simple, rgb=stereo_matching_data.image_0)"
    ]
   },
   {
@@ -514,7 +493,7 @@
    },
    "outputs": [],
    "source": [
-    "# open3d_visualize_point_cloud(xyz=xyz_sub_pixel, rgb=stereo_matching_data.image_0)"
+    "open3d_visualize_point_cloud(xyz=xyz_sub_pixel, rgb=stereo_matching_data.image_0)"
    ]
   },
   {
@@ -640,7 +619,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Show disparity map\n",
     "plt.figure(figsize=(10, 6))\n",
     "plt.imshow(disparity)\n",
     "plt.colorbar()\n",
@@ -676,7 +654,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# open3d_visualize_point_cloud(xyz=xyz_new, rgb=data.image_0)"
+    "open3d_visualize_point_cloud(xyz=xyz_new, rgb=data.image_0)"
    ]
   },
   {
@@ -719,6 +697,7 @@
     "    ax.imshow(disparity_new)\n",
     "    ax.axis(\"off\")\n",
     "    ax.set_title(f\"Disparity Map (Kernel: {kernel})\")\n",
+    "fig.tight_layout()\n",
     "fig.suptitle(\"Block Matching with Sum of Absolute Difference\")\n",
     "\n",
     "\n",
@@ -737,6 +716,7 @@
     "    ax.imshow(disparity_new)\n",
     "    ax.axis(\"off\")\n",
     "    ax.set_title(f\"Disparity Map (Kernel: {kernel})\")\n",
+    "fig.tight_layout()\n",
     "fig.suptitle(\"Block Matching with Sum of Squared Difference\")\n",
     "plt.show()"
    ]
