commit more changes

--- a/workshops/08_building_your_3d_vision_pipeline.ipynb
+++ b/workshops/08_building_your_3d_vision_pipeline.ipynb
@@ -288,7 +288,7 @@
     "\n",
     "This step will create a copy of the repository in your GitHub account:\n",
     "\n",
-    "1. Navigate to the [repository](https://github.com/martvald/oaf-3d-vision-pipeline-workshop).\n",
+    "1. Navigate to the [repository](https://github.com/teampurpler/oaf-3d-vision-pipeline-workshop).\n",
     "2. Click the **`Fork`** button in the top-right corner of the page.\n",
     "3. Enter a name for your forked repository (e.g., `pixel-to-point-cloud`) and optionally add a description.\n",
     "\n",
@@ -376,7 +376,7 @@
     "      This is the script containing the current tutorial on forking the repository. You can update this as well if you to show how to fork from you repository. To do this replace all instances of:\n",
     "\n",
     "      ``` bash\n",
-    "      martvald\n",
+    "      teampurpler\n",
     "      ```\n",
     "\n",
     "      with your user name:\n",
